--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
                     <span class="ip-label">Your IP Address (IPv4)</span>
                     <h1 id="ip"></h1>
                 </div>
-                <div id="location" class="location-info"></div>
+                <div class="location-grid">
+                    <div class="label">Country</div><div id="country" class="value"></div>
+                    <div class="label">Region</div><div id="region" class="value"></div>
+                    <div class="label">City</div><div id="city" class="value"></div>
+                </div>
             </div>
             
             <div class="card info-card">
